added header and title

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Viaggio a londra</title>
 </head>
 <body>
-    
+    <header>
+      <!--titolo-->  
+      <h1>Il mio viaggio a Londra</h1>
+    </header>   
 </body>
 </html>
