added London images

--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
 </head>
 <body>
     <header>
-      <!--titolo-->  
-      <h1>Il mio viaggio a Londra</h1>
-    </header>   
+        <!--titolo-->  
+        <h1>Il mio viaggio a Londra</h1>
+    </header> 
+    <main>
+        <!--immagini Londra-->
+        <img src="img/pexels-bill-emrich-230794-0.jpg" alt="">
+        <img src="img/pexels-bill-emrich-230794-1.jpg" alt="">
+        <img src="img/pexels-bill-emrich-230794-2.jpg" alt="">
+    </main>  
 </body>
 </html>
