--- a/index.html
+++ b/index.html
@@ -16,6 +16,26 @@
         <img src="img/pexels-bill-emrich-230794-0.jpg" alt="">
         <img src="img/pexels-bill-emrich-230794-1.jpg" alt="">
         <img src="img/pexels-bill-emrich-230794-2.jpg" alt="">
+        <hr>
+        <!--Spese-->
+        <section id="Spese">
+            <h2>Le mie spese</h2>
+            <table>
+                <thead>
+                    <th>Numero</th>
+                    <th>Descrizione</th>
+                    <th>Costo</th>
+                </thead>
+                <tbody>
+
+                </tbody>
+                <tfoot>
+
+                </tfoot>
+            </table>
+        </section>
+        
+
     </main>  
 </body>
 </html>
