added list layout

--- a/index.html
+++ b/index.html
@@ -53,6 +53,17 @@
                 </tfoot>
             </table>
         </section>
+        <hr>
+        <!--Cose da fare-->
+        <section id="Cose da fare">
+            <h3>Cose da fare</h3>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </section>
         
 
     </main>  
