--- a/index.html
+++ b/index.html
@@ -55,13 +55,21 @@
         </section>
         <hr>
         <!--Cose da fare-->
-        <section id="Cose da fare">
+        <section id="CoseDafare">
             <h3>Cose da fare</h3>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>
+                    <p>Visitare la Tower of London&cross;</p>
+                </li>
+                <li>
+                    <p>Visitare Greenwich&check;</p>
+                </li>
+                <li>
+                    <p>Ascoltare un artista di strada a Covent Garden&check;</p>
+                </li>
+                <li>
+                    <p>Mangiare il tipico Fish and Chips inglese&cross;</p>
+                </li>
             </ul>
         </section>
         
