added list layout

--- a/index.html
+++ b/index.html
@@ -72,6 +72,46 @@
                 </li>
             </ul>
         </section>
+        <hr>
+        <section id="Info">
+            <h3>Info utili:</h3>
+            <ol>
+                <li>
+                    <ul>
+                        <li>
+                            <p></p>
+                        </li>
+                        <li>
+                            <p></p>
+                        </li>
+                        <li>
+                            <p></p>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <ul>
+                        <li>
+                            <p></p>
+                        </li>
+                        <li>
+                            <p></p>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <ul>
+                        <li>
+                            <p></p>
+                        </li>
+                        <li>
+                            <p></p>
+                        </li>
+                    </ul>
+                </li>
+            </ol>
+
+        </section>
         
 
     </main>  
