added list "info utili"

--- a/index.html
+++ b/index.html
@@ -73,39 +73,43 @@
             </ul>
         </section>
         <hr>
+        <!--info utili-->
         <section id="Info">
             <h3>Info utili:</h3>
             <ol>
                 <li>
+                    <p>Numeri utili di emergenza</p>
                     <ul>
                         <li>
-                            <p></p>
+                            <p><strong>999</strong> - Emergenza</p>
                         </li>
                         <li>
-                            <p></p>
+                            <p><strong>101</strong> - Numero polizia</p>
                         </li>
                         <li>
-                            <p></p>
+                            <p><strong>111</strong> - Numero assistenza medica</p>
                         </li>
                     </ul>
                 </li>
                 <li>
+                    <p>Hotel</p>
                     <ul>
                         <li>
-                            <p></p>
+                            <p><strong>Nome hotel</strong>: Buckingham Palace</p>
                         </li>
                         <li>
-                            <p></p>
+                            <p><strong>Indirizzo hotel</strong>: Westminster, London SW1A 1AA, Regno Unito</p>
                         </li>
                     </ul>
                 </li>
                 <li>
+                    <p>Aereo</p>
                     <ul>
                         <li>
-                            <p></p>
+                            <p><strong>Volo di andata</strong>: Y1234X, ore 9.30 da Milano Malpensa</p>
                         </li>
                         <li>
-                            <p></p>
+                            <p><strong>Volo di ritorno</strong>: Y1236X, ore18.30 da London Heathrow</p>
                         </li>
                     </ul>
                 </li>
