added img and esercizio finito

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     </header> 
     <main>
         <!--immagini Londra-->
-        <img src="img/pexels-bill-emrich-230794-0.jpg" alt="">
-        <img src="img/pexels-bill-emrich-230794-1.jpg" alt="">
-        <img src="img/pexels-bill-emrich-230794-2.jpg" alt="">
+        <img src="img/pexels-bill-emrich-230794-0.jpg" alt="panoramica Londra">
+        <img src="img/pexels-bill-emrich-230794-1.jpg" alt="panoramica Londra">
+        <img src="img/pexels-bill-emrich-230794-2.jpg" alt="Panoramica Londra">
         <hr>
         <!--Spese-->
         <section id="Spese">
@@ -115,6 +115,13 @@
                 </li>
             </ol>
 
+        </section>
+        <hr>
+        <!--le foto-->
+        <section id="foto">
+            <h3>Le mie foto</h3>
+            <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="foto Londra">
+            <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="Foto Londra">
         </section>
         
 
