added img on div and change language

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <!--meta-->
     <meta charset="UTF-8">
@@ -13,10 +13,12 @@
     </header> 
     <main>
         <!--immagini Londra-->
-        <img src="img/pexels-bill-emrich-230794-0.jpg" alt="panoramica Londra">
-        <img src="img/pexels-bill-emrich-230794-1.jpg" alt="panoramica Londra">
-        <img src="img/pexels-bill-emrich-230794-2.jpg" alt="Panoramica Londra">
-        <hr>
+        <div>
+            <img src="img/pexels-bill-emrich-230794-0.jpg" alt="panoramica Londra">
+            <img src="img/pexels-bill-emrich-230794-1.jpg" alt="panoramica Londra">
+            <img src="img/pexels-bill-emrich-230794-2.jpg" alt="Panoramica Londra">
+        </div>
+            <hr>
         <!--Spese-->
         <section id="Spese">
             <h2>Le mie spese</h2>
@@ -120,8 +122,10 @@
         <!--le foto-->
         <section id="foto">
             <h3>Le mie foto</h3>
-            <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="foto Londra">
-            <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="Foto Londra">
+            <div>
+                <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="foto Londra">
+                <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="Foto Londra">
+            </div>
         </section>
         
 
